--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-ser
 background:radial-gradient(1000px 600px at 10% -10%,rgba(59,130,246,.28),transparent 60%),
 radial-gradient(800px 500px at 110% 0%,rgba(29,78,216,.22),transparent 55%),
 linear-gradient(180deg,var(--bg2) 0%,var(--bg) 100%);min-height:100vh;display:flex;justify-content:center;padding:16px;}
-.app{width:min(1000px,100%);border:1px solid var(--stroke);border-radius:20px;box-shadow:var(--shadow);padding:14px;
+.app{position:relative;width:min(1000px,100%);border:1px solid var(--stroke);border-radius:20px;box-shadow:var(--shadow);padding:14px;
 background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));height:100%;overflow-y:auto;overscroll-behavior:none;}
 .container,.content{height:100%;overflow-y:auto;overscroll-behavior:none;}
 header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px 14px;gap:10px;}
@@ -37,15 +37,14 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 .menu-btn{margin-top:12px;width:100%;padding:12px;border-radius:12px;border:1px dashed var(--stroke2);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);color:var(--text);font-weight:800;cursor:pointer;display:none;}
 .menu-btn:hover{border-style:solid;}
 .muted{color:var(--muted);font-size:13px;}
-.admin-fab{position:fixed;top:12px;left:12px;width:46px;height:46px;border-radius:50%;border:1px solid var(--stroke);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);box-shadow:var(--shadow);color:var(--text);display:flex;align-items:center;justify-content:center;font-weight:900;cursor:pointer;z-index:9999;transition:.15s ease;}
+.admin-fab{position:sticky;top:8px;width:46px;height:46px;border-radius:50%;border:1px solid var(--stroke);background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);box-shadow:var(--shadow);color:var(--text);display:flex;align-items:center;justify-content:center;font-weight:900;cursor:pointer;z-index:5;transition:.15s ease;align-self:flex-start;}
 .admin-fab:hover{border-color:var(--stroke2);transform:translateY(-1px);} .admin-fab:active{transform:scale(.98);}
 </style>
 </head>
 <body>
-<button id="admin-gear-btn" class="admin-fab" type="button" title="Админка">⚙️</button>
 <div class="app">
 <header>
-<div style="width:64px"></div>
+<button id="admin-gear-btn" class="admin-fab" type="button" title="Админка">⚙️</button>
 <div class="title">
 <h1>FirstClub</h1>
 <span>Выбери раздел</span>
