--- a/ludka.html
+++ b/ludka.html
@@ -88,6 +88,13 @@
     .cardbtn h3{margin:0;font-size:18px;}
     .cardbtn p{margin:4px 0 0;font-size:13px;color:var(--muted);}
     .badge{font-size:12px;color:var(--muted);font-weight:700;}
+    .cardbtn.soon{opacity:.75;cursor:not-allowed;position:relative;}
+    .cardbtn.soon::after{
+      content:"";
+      position:absolute;inset:0;
+      background:linear-gradient(120deg, transparent 30%, rgba(59,130,246,.08) 45%, transparent 60%);
+      pointer-events:none;
+    }
   </style>
 </head>
 <body>
@@ -130,6 +137,14 @@
         </div>
         <div class="badge">→</div>
       </a>
+
+      <div class="cardbtn soon">
+        <div>
+          <h3>🕹️ ???</h3>
+          <p>Новая игра · Coming soon</p>
+        </div>
+        <div class="badge">🔒</div>
+      </div>
     </section>
   </div>
 
