Add game nickname support and refresh copy

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
   <a class="cardbtn" href="/raffles">
     <div>
       <h3>🎁 Розыгрыши</h3>
-      <p>Анимации и тизер «Скоро»</p>
+      <p>Следи за активными розыгрышами, призами и победителями</p>
     </div>
     <div>→</div>
   </a>
     <a class="cardbtn" href="/cabinet">
   <div>
     <h3>👤 Личный кабинет</h3>
-    <p>Твой TG ID и билеты розыгрыша</p>
+    <p>Баланс, билеты и игровые данные в одном месте</p>
   </div>
   <div class="badge">→</div>
     </a>
