--- a/shop.html
+++ b/shop.html
@@ -144,21 +144,21 @@ const GOODS = [
   // Заглушки под будущие товары
   {
     id:"soon1",
-    name:"Скоро новые товары",
-    desc:"Мы готовим новые позиции для магазина.",
+    name:"Скоро обновление магазина",
+    desc:"Добавим новые призы и полезные вещи. Следи за новостями!",
     cost:0,
     disabled:true
   },
 ];
 
-const TICKETS = [
-  {
-    id:"raffle_ticket",
-    name:"🎟 Билет розыгрыша",
-    cost:500,
-    desc:"Шанс на выигрыш в розыгрыше, думаю именно тебе повезет забрать главный приз!"
-  }
-];
+  const TICKETS = [
+    {
+      id:"raffle_ticket",
+      name:"🎟 Билет розыгрыша",
+      cost:500,
+      desc:"Каждый билет участвует в ближайшем розыгрыше главного приза."
+    }
+  ];
 
 function setBalance(v){
   balance = v||0;
@@ -175,7 +175,7 @@ function renderGoods(){
       <h4>${g.name}</h4>
       <div class="desc">${g.desc}</div>
       <div class="cost">${g.cost>0?`Цена: 🪙 ${g.cost}`:""}</div>
-      <button class="buybtn" disabled>Скоро</button>
+      <button class="buybtn" disabled>Скоро в продаже</button>
     `;
     list.appendChild(el);
   });
