--- a/cabinet.html
+++ b/cabinet.html
@@ -123,6 +123,9 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
 }
 .profile-block {display:flex;flex-direction:column;gap:6px;margin-top:10px;font-weight:800;}
 .profile-block .muted {color:var(--muted);font-weight:700;font-size:13px;}
+.profile-action {display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:10px;border:1px dashed var(--stroke2);background:linear-gradient(180deg,var(--card),var(--card2));font-weight:800;font-size:12px;color:var(--text);cursor:pointer;max-width:fit-content;transition:.15s;}
+.profile-action:hover{border-style:solid;}
+.profile-subtext{font-size:12px;color:var(--muted);}
 </style>
 </head>
 <body>
@@ -144,6 +147,8 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
     <div class="profile-block">
       <div>Никнейм: <b id="profileName">—</b></div>
       <div class="muted">Telegram: <span id="profileUsername">—</span></div>
+      <button class="profile-action" id="gameNickBtn" type="button">Игровой Nick_Name: <span id="gameNickValue">добавить</span></button>
+      <div class="profile-subtext">Нужен для турниров и выдачи призов. Хранится точно в формате Nick_Name.</div>
       <div class="muted">ID: <span id="profileTgId">—</span></div>
     </div>
   </section>
@@ -191,6 +196,7 @@ function renderProfile(){
   const nameEl = document.getElementById("profileName");
   const userEl = document.getElementById("profileUsername");
   const tgIdEl = document.getElementById("profileTgId");
+  const gameNickEl = document.getElementById("gameNickValue");
 
   const name = (profileData?.name || "").trim();
   const username = (profileData?.username || "").trim();
@@ -198,8 +204,30 @@ function renderProfile(){
 
   nameEl.textContent = name || "—";
   userEl.textContent = username ? `@${username.replace(/^@+/, "")}` : "—";
+  gameNickEl.textContent = (profileData?.nick_name || "").trim() || "добавить";
   tgIdEl.textContent = tgId;
   if(tgId) setTgIdLabel(tgId);
+}
+
+async function promptGameNick(){
+  const current = (profileData?.nick_name || "").trim();
+  const next = prompt("Укажи свой игровой Nick_Name", current || "Nick_Name");
+  if(next === null) return;
+  const value = (next || "").trim();
+  if(!value){
+    tg?.showAlert?.("Nick_Name не может быть пустым");
+    return;
+  }
+  const res = await apiPost("/api/profile", { Nick_Name: value });
+  if(!res || !res.ok){
+    const msg = res?.error || "Не удалось сохранить Nick_Name";
+    tg?.showAlert?.(msg);
+    return;
+  }
+  profileData = profileData || {};
+  profileData.nick_name = value;
+  renderProfile();
+  tg?.showPopup?.({message: "Nick_Name обновлён"});
 }
 
 function renderTickets(){
@@ -257,6 +285,8 @@ async function loadProfile(){
     setTgIdLabel("нет TG id");
   }
 })();
+
+document.getElementById("gameNickBtn")?.addEventListener("click", promptGameNick);
 </script>
 </body>
 </html>
