--- a/cabinet.html
+++ b/cabinet.html
@@ -148,7 +148,7 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
       <div>Никнейм: <b id="profileName">—</b></div>
       <div class="muted">Telegram: <span id="profileUsername">—</span></div>
       <button class="profile-action" id="gameNickBtn" type="button">Игровой Nick_Name: <span id="gameNickValue">добавить</span></button>
-      <div class="profile-subtext">Нужен для турниров и выдачи призов. Хранится точно в формате Nick_Name.</div>
+      <div class="profile-subtext">Нужен для тесной интеграции игры и бота.</div>
       <div class="muted">ID: <span id="profileTgId">—</span></div>
     </div>
   </section>
