Refactor frontend menus and structure

--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
     <div>→</div>
   </a>
 
-  <a class="cardbtn" href="/prices">
+  <a class="cardbtn" href="/minigames">
     <div>
-      <h3>💰 Цены</h3>
-      <p>Прайс‑листы, справочник, поиск</p>
+      <h3>🕹️ Миниигры</h3>
+      <p>Меню всех мини‑игр клуба</p>
     </div>
     <div>→</div>
   </a>
 
-  <a class="cardbtn" href="/rpg">
+  <a class="cardbtn" href="/prices">
     <div>
-      <h3>🗺️ RPG</h3>
-      <p>Прокачка, квесты, статистика</p>
+      <h3>💰 Цены</h3>
+      <p>Прайс‑листы, справочник, поиск</p>
     </div>
     <div>→</div>
   </a>
