--- a/minigames/minigames.html
+++ b/minigames/minigames.html
@@ -65,18 +65,18 @@
     <section class="section">
       <p class="muted">Меню мини‑игр клуба. Запускай понравившиеся режимы или следи за обновлениями — новые игры уже в пути.</p>
       <div class="grid">
-        <a class="cardbtn" href="/minigames/rpg">
+        <a class="cardbtn" href="/snake">
           <div>
-            <h3>🗺️ RPG</h3>
-            <p>Прокачка и приключения (скоро)</p>
+            <h3>🟢 Змейка</h3>
+            <p>Классика: собирай еду, не врежься</p>
           </div>
           <div>→</div>
         </a>
 
-        <a class="cardbtn" href="/minigames/mr_runner">
+        <a class="cardbtn" href="/runner">
           <div>
-            <h3>🏃‍♂️ МистерБегун</h3>
-            <p>Аркадный раннер, релиз скоро</p>
+            <h3>🏃‍♂️ Мистер бегун</h3>
+            <p>Аркадный раннер, прыгай через преграды</p>
           </div>
           <div>→</div>
         </a>
