Disable runner minigame entry

--- a/minigames/minigames.html
+++ b/minigames/minigames.html
@@ -73,13 +73,13 @@
           <div>→</div>
         </a>
 
-        <a class="cardbtn" href="/runner">
+        <button class="cardbtn disabled" type="button" data-disabled="true">
           <div>
             <h3>🏃‍♂️ Мистер бегун</h3>
-            <p>Аркадный раннер, прыгай через преграды</p>
+            <p>В разработке</p>
           </div>
-          <div>→</div>
-        </a>
+          <div>…</div>
+        </button>
 
         <button class="cardbtn disabled" type="button" data-disabled="true">
           <div>
