Add neon rhythm game and smooth snake movement

--- a/ludka/ludka.html
+++ b/ludka/ludka.html
@@ -130,6 +130,14 @@
         <div class="badge">→</div>
       </a>
 
+      <a class="cardbtn" href="/pulse">
+        <div>
+          <h3>🌌 Неоновый ритм</h3>
+          <p>Поймай ноты в такт и собери комбо</p>
+        </div>
+        <div class="badge">→</div>
+      </a>
+
       <a class="cardbtn" href="/rating">
         <div>
           <h3>🏆 Рейтинг</h3>
@@ -137,14 +145,6 @@
         </div>
         <div class="badge">→</div>
       </a>
-
-      <div class="cardbtn soon">
-        <div>
-          <h3>🕹️ ???</h3>
-          <p>Новая игра · Coming soon</p>
-        </div>
-        <div class="badge">🔒</div>
-      </div>
     </section>
   </div>
 
